--- a/manifest.json
+++ b/manifest.json
@@ -5,17 +5,11 @@
   "short_name": "myPWA",
   "icons": [
     {
-      "src": "/cat-icon/web-app-manifest-192x192.png",
-      "sizes": "192x192",
+      "src": "/icon.png",
+      "sizes": "96x96",
       "type": "image/png",
       "purpose": "maskable"
     },
-    {
-      "src": "/cat-icon/web-app-manifest-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
   ],
   "theme_color": "#1a1a1a",
   "background_color": "#1a1a1a",
