--- a/manifest.json
+++ b/manifest.json
@@ -2,29 +2,27 @@
   "lang": "en",
   "name": "This is my awesome PWA",
   "short_name": "myPWA",
+  "id": "catPVA/v9"
+  "theme_color": "#1a1a1a",
+  "background_color": "#1a1a1a",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "natural",
   "icons": [
     {
       "src": "/icons/icon96.png",
       "sizes": "96x96",
       "type": "image/png",
-      "purpose": "maskable"
     },
 	{
       "src": "/icons/icon192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
     },
 	{
       "src": "/icons/icon512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
     }
-  ],
-  "theme_color": "#1a1a1a",
-  "background_color": "#1a1a1a",
-  "start_url": "/",
-  "display": "standalone",
-  "orientation": "natural"
+  ]
 }
