--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "lang": "en",
   "name": "This is my awesome PWA",
   "short_name": "myPWA",
-  "id": "catPVA/v10",
+  "id": "catPWA/v11",
   "theme_color": "#1a1a1a",
   "background_color": "#1a1a1a",
   "start_url": "/",
@@ -12,17 +12,17 @@
     {
       "src": "/icons/icon96.png",
       "sizes": "96x96",
-      "type": "image/png",
+      "type": "image/png"
     },
 	{
       "src": "/icons/icon192.png",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/png"
     },
 	{
       "src": "/icons/icon512.png",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/png"
     }
   ]
 }
