--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
   {
   "lang": "ru",
   "name": "Кот-ПВА",
-  "short_name": "КПВА",
-  "id": "catPWA/v14",
+  "short_name": "Кот-ПВА",
+  "id": "catPWA/v15",
   "theme_color": "#1a1a1a",
   "background_color": "#1a1a1a",
   "start_url": "/",
